changed README for testing

--- a/blocitoff/README.rdoc
+++ b/blocitoff/README.rdoc
@@ -5,6 +5,7 @@
 
 Blocitoff will aim to keep to-do lists manageable by automatically deleting to-do items that have not been completed after seven days. The hypothesis is that if the to-do item is not important enough to be completed in seven days, it doesn't belong on your to-do list.
 
+App:
 github: [blocitoff](https://github.com/zein1016/blocitoff)
 
 ## User Story  
